[package]
name = "rs_serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.1"
macroquad = "0.4.1"
plotters = "0.3.5"
microfft = "0.5.1"
num-complex = "0.4.3"

[profile.release]
debug = true
